[gd_scene load_steps=7 format=2]

[ext_resource path="res://Display.gd" type="Script" id=1]
[ext_resource path="res://TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://EndScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://SettingsScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/menu_click.wav" type="AudioStream" id=6]

[node name="Display" type="Node"]

script = ExtResource( 1 )

[node name="TitleScreen" parent="." index="0" instance=ExtResource( 2 )]

offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="EndScreen" parent="." index="1" instance=ExtResource( 3 )]

offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="PlayScreen" parent="." index="2" instance=ExtResource( 4 )]

offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="SettingsScreen" parent="." index="3" instance=ExtResource( 5 )]

offset = Vector2( 500, 0 )
transform = Transform2D( 1, 0, 0, 1, 500, 0 )

[node name="TransitionSound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="TitleScreen/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="TitleScreen/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]

[connection signal="pressed" from="EndScreen/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]

[connection signal="pressed" from="EndScreen/HBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]

[connection signal="pressed" from="SettingsScreen/ReturnButton" to="." method="_on_ReturnButton_pressed"]

[connection signal="pressed" from="SettingsScreen/HBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]

[connection signal="pressed" from="SettingsScreen/HBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]


[editable path="TitleScreen"]
[editable path="EndScreen"]
[editable path="SettingsScreen"]
